# Rust

./: .dockerignore  .gitignore  Cargo.toml  Clients.sln  README.md
.github/workflows/: rust.yml
OrderClient/: App.xaml  App.xaml.cs  Dockerfile  OrderClient.csproj  Program.cs  ShellView.xaml  ShellView.xaml.cs  ShellViewModel.cs  ViewLocator.cs  ViewModelBase.cs  deploy.ps1
OrderClient/Features/: ConnectionTestView.xaml  ConnectionTestView.xaml.cs  ConnectionTestViewModel.cs
OrderClient/Features/Ordering/: NewOrderView.xaml  NewOrderView.xaml.cs  NewOrderViewModel.cs  OrderOverviewView.xaml  OrderOverviewView.xaml.cs  OrderOverviewViewModel.cs
OrderClient/Properties/: launchSettings.json
factory-functional-units/: Cargo.toml
factory-functional-units/src/: lib.rs
factory_functional_units/: .gitignore  Cargo.toml  Dockerfile  Get-LineCount.ps1  build.rs  deploy.ps1  docker-compose.yml
factory_functional_units/proto/: functional_units.proto
factory_functional_units/src/: conveyor.rs  input_stack.rs  lib.rs  main.rs  output_stack.rs  plotter.rs  services.rs
factory_functional_units/src/server/: mod.rs
ping-pong/: Cargo.toml
ping-pong/src/: main.rs
ping_pong/: Cargo.toml
ping_pong/src/: main.rs  sum_print.rs
protos/: fiab.proto  functional_units.proto
