[package]
name = "factory_functional_units"
version = "0.3.0"
authors = ["Martin Hochstrasser <highstreeto@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tonic = "0.1.0"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33.0"
rand = "0.7.3"

[build-dependencies]
tonic-build = "0.1.0"